Phase 3 - Feature 2: Implement Multi-Step Task Executor
- Added WorkflowExecutionService for executing multi-step developer workflows
- Added WorkflowExecutionState enum (Pending, Running, Completed, Skipped, Failed, Cancelled)
- Added StepDependency DTO for defining step dependency relationships
- Added DependencyValidationResult DTO for dependency validation results
- Added ProgressTracker DTO for tracking execution progress
- Added ExecutionTimelineEntry DTO for step execution timeline
- Added WorkflowExecutionResponse DTO with StepResultInfo, ProgressSummary, FinalReport
- Added ExecuteWorkflowTool MCP tool (execute_workflow)
- Added executeWorkflowSimple convenience method
- Registered ExecuteWorkflowTool in McpServerConfig
- Added Jackson annotations to WorkflowDefinition, WorkflowStep, StepDependency, ExecutionTimelineEntry
- Created comprehensive unit tests for WorkflowExecutionService (20 tests)
- Created comprehensive unit tests for ExecuteWorkflowTool (8 tests)
- All 1033 tests pass with mvn clean install